assets/css/app.css
body, html {
  height: 100%;
}

.header h1 {
    /*    position: relative;*/
    width: auto;
}



.page-login
{

    background-image: url(../img/blurred-background-86.jpg);
    font-family: Montserrat;        
    text-align: center;
    color: white;
    height: 100%;

}


.login_box {
    color: black;
    margin: 0 auto 0 auto;
    border-radius: 10px;
    background-color: rgba(204, 204, 204, 0.6);
    width: 400px;
    font-size: 20px;
    /*    opacity: .4;*/
}

.login_textBox {
    font-size: 20px;
    background-color: white;
    border: none;
    border-radius: 4px;
    font-family: 'Roboto';
    height: 40px;
    text-align: center;
    color: #9e9e9e;
    opacity: 1;
}

.login_button {
    background-color: #008CBA;
    font-family: 'Roboto';
    /* Green */
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

@keyframes scaleUp {
    from    { opacity: 0.3; -webkit-transform: scale(0.8); }
}

.page{
    position:absolute; 
    text-align:center;
    /*top:0;  */
    width:100%; 
    height: 100%;
}

#sidebar {
    position:absolute;
    top:0; bottom:0; left:0;
    width:100px;
    background: #545454;
    color: white;
    font-size: 16px;


}



#dataSquare
{
    background-color: #e4e4e4;
    /*width: 88%;*/
    /*height: 85%;*/
    color: black;
    /*position: relative;*/


    margin-left: 150px;
    margin-top: 50px; 

    border-style: solid;
    border-width: 5px;
    border-radius: 5px;
    border-right: transparent;
    border-left: transparent;
    border-top: transparent;
    border-bottom-color: #006400;

}

#card
{
    background-color: white; 
    width: 70%;
    height: 200px;
    padding-top: 20px;


    margin-top: 40px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;

    border-style: solid;
    border-width: 3px;
    border-radius: 5px;
    border-right: transparent;
    border-left: transparent;
    border-top: transparent;
    border-bottom-color: #16A818;

    position:relative;
}

#card #header{
    margin-top: 2%;
    font-size: 20px;
    color: #545454;
}

.disconnectedStatus
{
    font-family: Roboto;
    font-size: 20px;
    color: #c0392b;
}

/*-------SPINNER HTML------*/
.spinner {
  width: 40px;
  height: 40px;

  position: relative;
  margin-left: 44%;
  /*margin: 100px auto;*/
}

.double-bounce1, .double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #299CC2;
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  
  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
  animation: sk-bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

@-webkit-keyframes sk-bounce {
  0%, 100% { -webkit-transform: scale(0.0) }
  50% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bounce {
  0%, 100% { 
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 50% { 
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}

